// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPreview Snapshots renders as expected 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
  background-color: #ffffff;
  border-color: #ffffff;
  pointer-events: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-2::-moz-placeholder {
  color: #5e6a75;
}

.emotion-2:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-2::placeholder {
  color: #5e6a75;
}

.emotion-2:hover {
  border-color: #333d47;
}

.emotion-2:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-2:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::placeholder {
  color: #a1aab3;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <input
    className="emotion-0 emotion-1 emotion-2"
    maxLength={7}
    onChange={[Function]}
    placeholder=""
    readOnly={true}
    spellCheck={false}
    type="text"
    value=""
  />
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;

exports[`ColorPreview Snapshots renders valid empty color input 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
  background-color: #ffffff;
  border-color: #ffffff;
  pointer-events: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-2::-moz-placeholder {
  color: #5e6a75;
}

.emotion-2:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-2::placeholder {
  color: #5e6a75;
}

.emotion-2:hover {
  border-color: #333d47;
}

.emotion-2:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-2:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::placeholder {
  color: #a1aab3;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <input
    className="emotion-0 emotion-1 emotion-2"
    maxLength={7}
    onChange={[Function]}
    placeholder=""
    readOnly={true}
    spellCheck={false}
    type="text"
    value=""
  />
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;

exports[`ColorPreview Snapshots renders with a selected color 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
  background-color: #ffffff;
  border-color: #ffffff;
  pointer-events: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-2::-moz-placeholder {
  color: #5e6a75;
}

.emotion-2:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-2::placeholder {
  color: #5e6a75;
}

.emotion-2:hover {
  border-color: #333d47;
}

.emotion-2:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-2:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::placeholder {
  color: #a1aab3;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <input
    className="emotion-0 emotion-1 emotion-2"
    maxLength={7}
    onChange={[Function]}
    placeholder=""
    readOnly={true}
    spellCheck={false}
    type="text"
    value="e6e"
  />
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;

exports[`ColorPreview Snapshots renders with a selected color with # 1`] = `
.emotion-7 {
  position: relative;
}

.emotion-2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  margin: 0;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: px;
  background-color: #ffffff;
  border-color: #ffffff;
  pointer-events: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-2::-moz-placeholder {
  color: #5e6a75;
}

.emotion-2:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-2::placeholder {
  color: #5e6a75;
}

.emotion-2:hover {
  border-color: #333d47;
}

.emotion-2:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-2:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-2:disabled::placeholder {
  color: #a1aab3;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  margin-top: 10px;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-5 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div
  className="emotion-7 emotion-8"
>
  <input
    className="emotion-0 emotion-1 emotion-2"
    maxLength={7}
    onChange={[Function]}
    placeholder=""
    readOnly={true}
    spellCheck={false}
    type="text"
    value="e6e"
  />
  <div
    className="emotion-3 emotion-4"
    style={
      Object {
        "backgroundColor": "#e6e",
      }
    }
  />
  <span
    className="emotion-5 emotion-6"
  >
    #
  </span>
</div>
`;
